@@ -1,10 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(src/rapi.c)
+AC_PREREQ(2.53)
+
+AC_INIT(librapi2, @@YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT@@)
+AC_CONFIG_HEADERS(rapi_config.h)
+AC_CONFIG_SRCDIR(src/rapi.c)
 
 AC_CANONICAL_TARGET
 
-AM_INIT_AUTOMAKE(librapi2, YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT)
-AM_CONFIG_HEADER(rapi_config.h)
+AM_INIT_AUTOMAKE
 
 CFLAGS="-Wsign-compare -Wno-long-long $CFLAGS"
 
@@ -60,6 +63,70 @@ AC_LIB_RPATH
 
 dnl Check for libsynce
 PKG_CHECK_MODULES(LIBSYNCE, libsynce >= 0.14)
+
+
+dnl
+dnl whether odccm dbus support is required
+dnl
+AC_ARG_ENABLE(odccm-support,
+              [  --enable-odccm-support  enable odccm support (requires D-Bus)],
+              enable_odccm_support=$enableval, enable_odccm_support=yes)
+
+if ! test "$enable_odccm_support" = "no"; then
+  dnl Check for D-Bus
+  PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.60, dbus-glib-1 >= 0.60],
+                    dbus=yes, dbus=no)
+
+  if test "$dbus" = "no"; then
+    if test "$enable_odccm_support" = "auto"; then
+      AC_MSG_NOTICE([D-Bus not found, building without odccm support])
+      enable_odccm_support=no
+    else
+      AC_MSG_ERROR([odccm support requested but D-Bus could not be found])
+    fi
+  else
+    AC_MSG_NOTICE([Building with odccm support])
+    AC_DEFINE(ENABLE_ODCCM_SUPPORT, 1, [Define if building with odccm support])
+    enable_odccm_support=yes
+  fi
+else
+  AC_MSG_NOTICE([Building without odccm support])
+fi
+
+if test "$enable_odccm_support" = "yes"; then odccm=1; else odccm=0; fi
+AC_DEFINE_UNQUOTED(ENABLE_ODCCM_SUPPORT, $odccm, [Define to 1 if you want odccm support.])
+
+dnl
+dnl whether hal dbus support is required
+dnl
+AC_ARG_ENABLE(hal-support,
+              [  --enable-hal-support  enable hal support (requires D-Bus)],
+              enable_hal_support=$enableval, enable_hal_support=yes)
+
+if ! test "$enable_hal_support" = "no"; then
+  dnl Check for DBus and Hal
+  PKG_CHECK_MODULES(HAL, [dbus-1 >= 0.60, dbus-glib-1 >= 0.60],
+                    hal_found=yes, hal_found=no)
+
+  if test "$hal_found" = "no"; then
+    if test "$enable_hal_support" = "auto"; then
+      AC_MSG_NOTICE([Hal not found, building without hal support])
+      enable_hal_support=no
+    else
+      AC_MSG_ERROR([Hal support requested but hal could not be found])
+    fi
+  else
+    AC_MSG_NOTICE([Building with hal support])
+    AC_DEFINE(ENABLE_HAL_SUPPORT, 1, [Define if building with hal support])
+    enable_hal_support=yes
+  fi
+else
+  AC_MSG_NOTICE([Building without hal support])
+fi
+
+if test "$enable_hal_support" = "yes"; then hal=1; else hal=0; fi
+AC_DEFINE_UNQUOTED(ENABLE_HAL_SUPPORT, $hal, [Define to 1 if you want hal support.])
+
 
 dnl Checks for header files.
 
@@ -132,7 +199,12 @@ fi
 AM_CONDITIONAL(HAVE_PYTHON, test x$have_python = xyes)
 
 # checks for pthreads
+
+saved_CFLAGS="$CFLAGS"
+CFLAGS=`echo $CFLAGS | sed 's|-Werror||'`
+
 ACX_PTHREAD([enable_threads="pthread"],[enable_threads="no"])
+CFLAGS="$saved_CFLAGS"
 if test $enable_threads != "pthread"; then
 	AC_MSG_ERROR([unable to find pthreads, currently this is required])
 else
