@@ -1,5 +1,3 @@
-AM_CFLAGS = @LIBSYNCE_CFLAGS@ -Wall
-
 INCLUDES = -I$(top_srcdir)/src
 
 ## create this library
@@ -9,3 +7,5 @@ noinst_LTLIBRARIES = libsupport.la
 libsupport_la_SOURCES = \
 	rapi_buffer.h   rapi_buffer.c  \
 	rapi_context.h  rapi_context.c
+libsupport_la_CFLAGS = @DBUS_CFLAGS@ @HAL_CFLAGS@ @LIBSYNCE_CFLAGS@
+libsupport_la_LIBADD  = @DBUS_LIBS@ @HAL_LIBS@ @LIBSYNCE_LIBS@
